# HapNav

./: .gitmodules  README.md
Docs/: PRD_Figures  impl.yaml  impl_wristband.yaml
Docs/Arduino_IDE/: Arduino_Setting.docx
Docs/Figures/: README.md
Docs/Figures/PRD/: HighLevelDiagram.drawio  UserInteraction.drawio
Docs/Implementation/: 00_overview.md  00_system_overview.yaml  01_chest_pin.md  02_wristband.md  02_wristband.yaml  03_ble_protocol.md  04_sensor_fusion.md  05_obstacle_detection.md  06_dropoff_detection.md  07_haptic_policy.md  08_power_and_assembly.md  09_head_clearance.md
Docs/PRD_Figures/: Read.md
Docs/Sensor_Spec/: Architecture layout.docx  IMU_Magnetometer.docx  System Architecture of MCU.docx
Implementation_CodeBase/BLE/ESP_S3/ESP_BLE/: ESP_BLE.ino
Implementation_CodeBase/BLE/XIAO_nRF52840/nRF52840_BLE/: nRF52840_BLE.ino
Implementation_CodeBase/Porting_STM_To_Arduino/examples/lsm6dso_self_test/: lsm6dso_self_test.ino
Implementation_CodeBase/SparkFun_Qwiic_6DoF_LSM6DSO_Arduino_Library-main/examples/Fifo_Example/: Fifo_Example.ino
Implementation_CodeBase/SparkFun_Qwiic_6DoF_LSM6DSO_Arduino_Library-main/src/: lsm6dso_lis2mdl.h
Implementation_CodeBase/XIAO_nRF52840_Receiver/: XIAO_nRF52840_Receiver.ino
Reference_CodeBase/BLE/XIAO_nRF52840/nRF52840_BLE/: nRF52840_BLE.ino
Reference_CodeBase/Porting_STM_To_Arduino/: library.properties
Reference_CodeBase/SparkFun_Qwiic_6DoF_LSM6DSO_Arduino_Library-main/src/: SparkFunLSM6DSO.cpp
Visualizer/firmware/vl53l5cx_reader/: vl53l5cx_reader.ino
Visualizer/modules/: Object_Detector.py
ZephyrProject/Firmware/: README.md  west.yml
ZephyrProject/Firmware/pin/: CMakeLists.txt  prj.conf
ZephyrProject/Firmware/pin/boards/: xiao_esp32s3.overlay
ZephyrProject/Firmware/pin/src/: ble.c  ble.h  main.c  sensors.c  sensors.h
ZephyrProject/Firmware/wristband/: CMakeLists.txt  Kconfig  prj.conf
ZephyrProject/Firmware/wristband/boards/: xiao_ble.overlay
ZephyrProject/Firmware/wristband/src/: ble.c  ble.h  main.c
(+31 files in other folders)
